# lolbase

./: .env  Cargo.toml  LICENSE-MIT  README.md
migrations/: 20220921164646_records.sql  20220923084251_columns.sql  20220923084347_rows.sql  20220924235055_auth.sql
src/: main.rs
src/lib/: mod.rs
src/lib/db/: mod.rs
src/lib/error/: mod.rs
src/lib/web/: media.rs  mod.rs  routes.rs
